# lorsum

./: Cargo.toml  README.md
files/: buzz.lorsum
src/: bin.rs  lib.rs
src/lang/: lang_def.rs  mod.rs
